crates/brokkr-cli/src/tui/snapshots/notice_boundary_160x48.snap
---
source: crates/brokkr-cli/src/tui/snapshot_tests.rs
---
"┌graph─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────[ ∙ ∙ ∙ BROKKR ]┐"
"│boundary  harness · unboxed                                                                                                                                   │"
"│                                                                                                                                                              │"
"│              ┌─⏺ simplicity─┐                                                                                                                                │"
"│   ⏺ intake──ᐳ┤  positions   ├──ᐳ⏺ review──ᐳ∙ chief                                                                                                           │"
"│              └─⏺ robustness─┘                                                                                                                                │"
"│   intake                    design                                                                                                                           │"
"│                                                                                                                                                              │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘"
"┌seats─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐"
"│participant                 status    attempts turns cost    tokens model            boundary activity                                                        │"
"│intake                      succeeded 1        3     $0.0313 —      claude-fable-5-1 harness  intook · 2m03s                                                  │"
"│design                      working   1        Σ 2   —       —      —                —        4 members ↓                                                     │"
"│design:positions:simplicity succeeded 1        —     —       —      —                —        0s                                                              │"
"│design:positions:robustness succeeded 1        —     —       —      —                —        0s                                                              │"
"│design:review:only          succeeded 1        —     —       —      —                —        0s                                                              │"
"│design:chief                working   1        2     —       —      —                —        Write · specs/interactive-tui/spec.md                           │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘"
"┌trail─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐"
"│1  run/started  one derivation, three surfaces…                                                                                                               │"
"│2  phase/entered  intake                                                                                                                                      │"
"│7  effect/succeeded  intake · intook · model claude-fable-5-1 · boundary harness                                                                              │"
"│8  transition/decided  INTAKE-OK intake → design · intook                                                                                                     │"
"│9  phase/entered  design                                                                                                                                      │"
"│                                                                                                                                                              │"
"│                                                                                                                                                              │"
"│                                                                                                                                                              │"
"│                                                                                                                                                              │"
"│                                                                                                                                                              │"
"│                                                                                                                                                              │"
"│                                                                                                                                                              │"
"│                                                                                                                                                              │"
"│                                                                                                                                                              │"
"│                                                                                                                                                              │"
"│                                                                                                                                                              │"
"│                                                                                                                                                              │"
"│                                                                                                                                                              │"
"│                                                                                                                                                              │"
"│                                                                                                                                                              │"
"│                                                                                                                                                              │"
"│                                                                                                                                                              │"
"│                                                                                                                                                              │"
"│                                                                                                                                                              │"
"│                                                                                                                                                              │"
"│                                                                                                                                                              │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘"
"runs · run run-7                                                                                                                                                "
"←→ rail · ↑↓ lanes · Enter scope phase · Tab pane · Esc back · / filter · r refresh · ? help · q quit                                                           "
