crates/brokkr-cli/src/tui/snapshots/notice_boundary_80x20.snap
---
source: crates/brokkr-cli/src/tui/snapshot_tests.rs
---
"┌graph─────────────────────────────────────────────────────────[ ∙ ∙ ∙ BROKKR ]┐"
"│boundary  harness · unboxed                                                   │"
"│              ┌─⏺ simplicity─┐                                                │"
"│   ⏺ intake──ᐳ┤  positions   ├──ᐳ⏺ review──ᐳ∙ chief                           │"
"│              └─⏺ robustness─┘                                                │"
"│   intake                    design                                           │"
"│                                                                              │"
"└──────────────────────────────────────────────────────────────────────────────┘"
"┌seats─────────────────────────────────────────────────────────────────────────┐"
"│participan status    attempts turns cost   tokens model    boundary activity  │"
"│intake     succeeded 1        3     $0.031 —      claude-f harness  intook · 2│"
"│design     working   1        Σ 2   —      —      —        —        4 members │"
"└──────────────────────────────────────────────────────────────────────────────┘"
"┌trail─────────────────────────────────────────────────────────────────────────┐"
"│1  run/started  one derivation, three surfaces…                               │"
"│2  phase/entered  intake                                                      │"
"│7  effect/succeeded  intake · intook · model claude-fable-5-1 · boundary harne│"
"└──────────────────────────────────────────────────────────────────────────────┘"
"runs · run run-7                                                                "
"←→ rail · ↑↓ lanes · Enter scope phase · Tab pane · Esc back · / filter · r refr"
